--- a/tdb/modules/ROOT/pages/data-model.adoc
+++ b/tdb/modules/ROOT/pages/data-model.adoc
@@ -48,8 +48,9 @@ Schema definitions include constraints on what types (and their instances) can d
 For example, for an entity to be able to have ownership of an attribute,
 entity's type definition must have ownership of attribute's type declared in a schema.
 
-For more information about queries, see the xref:typedb::basics/query-language.adoc[] page. +
-For more information about polymorphism, see the xref:typedb::basics/polymorphic-patterns.adoc[] page.
+For more information about queries, see the https://typedb.com/docs/typedb/basics/query-language[Query language] page. +
+For more information about polymorphism, see the
+https://typedb.com/docs/typedb/basics/polymorphic-patterns[Polymorphic patterns] page.
 
 Any type can be an owner of an attribute type and can play a role in a relation type.
 
